# kafka-consumer-template

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/agents/: consumer-builder.md  database-engineer.md  git-agent.md  producer-validator.md  testing.md
alembic/: env.py
docs/: architecture.md  configuration.md  creating-a-consumer.md  deploy-existing-infra.md  deployment.md  error-handling.md  index.md  local-development.md  observability.md  running-and-validating.md  scope.md  testing.md
docs/patterns/: background-tasks.md  concurrency.md  database.md  idempotency.md
k8s/: deployment.yaml  service.yaml
src/config/: __init__.py  settings.py
src/consumers/example/: consumer.py  handlers.py  metrics.py  schemas.py  settings.py
src/core/: __init__.py  client.py  consumer.py  context.py  exceptions.py  health.py  idempotency.py  logging.py  metrics.py  redis.py  retry.py  utils.py
src/db/: database.py
src/services/: __init__.py
tests/: conftest.py
tests/integration/: conftest.py  test_idempotency.py
tests/integration/db/: test_database.py
tests/unit/consumers/example/: test_handlers.py
tests/unit/core/: test_context.py  test_exceptions.py  test_retry.py  test_utils.py
tests/unit/db/: test_database.py
tools/producer_demo/: README.md  main.py
