[project]
name = "kafka-consumer-template"
version = "0.1.0"
description = "Template para Kafka/Redpanda consumers en Python — production-ready, testeable, observable"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Joshua Carrasco", email = "ocarrasco@inbtel.com" }]

# Runtime de PRODUCCIÓN únicamente.
# FastAPI, pytest, ruff, etc. viven en [dependency-groups] — NO acá.
dependencies = [
    "aiokafka>=0.11.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "redis[hiredis]>=5.2.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
]

[project.scripts]
example-consumer = "src.consumers.example.consumer:run"

[dependency-groups]
# Dev tools — incluye el producer_demo FastAPI
dev = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "ipython>=8.30.0",
]

# Testing — sin FastAPI TestClient (no aplica)
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers[kafka,redis,postgres]>=4.8.0",
    "httpx>=0.27.0",
]

# Linting / type checking
lint = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

# -----------------------------------------------------------------------------
# Packaging — SOLO src/ va al wheel. tools/, tests/, alembic/, k8s/ quedan fuera.
# -----------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# -----------------------------------------------------------------------------
# Ruff: linting + formatting
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",    # pycodestyle + pyflakes
    "I",              # isort
    "B",              # bugbear
    "UP",             # pyupgrade
    "ASYNC",          # async patterns
    "TID",            # tidy imports (para banned-api)
    "RUF",
]
ignore = [
    "E501",           # line-length manejado por formatter
]

# CAPA 4: banned-api — src/ NO puede importar FastAPI/uvicorn.
# Si rompe ruff check src/ en CI, alguien metió FastAPI donde no va.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"fastapi".msg = "FastAPI no pertenece a src/. Solo en tools/producer_demo/."
"uvicorn".msg = "uvicorn no pertenece a src/. Solo en tools/producer_demo/."
"starlette".msg = "Starlette es FastAPI-stack. No pertenece a src/."

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]                    # assert False OK en tests
"tools/**/*.py" = ["TID251"]                  # FastAPI sí está permitido acá

# -----------------------------------------------------------------------------
# MyPy
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["testcontainers.*", "aiokafka.*", "asyncpg.*"]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: tests rápidos, sin infra",
    "integration: tests con Testcontainers (Redpanda + Redis + Postgres)",
    "slow: tests >5s",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/services/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
